--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,9 +1,25 @@
 * {
     margin: 0;
     padding: 0;
+    outline: none;
+    border: none;
     box-sizing: border-box;
+}
+
+a{
+    text-decoration: none;
+    color: #ffffff;
 }
 
 ul {
     list-style: none;
+}
+
+img{
+    max-width: 100%;
+}
+
+html {
+    color: #ffffff;
+    scroll-behavior: smooth;
 }
